@@ -16,22 +16,20 @@
 ** Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 */
 
-typedef	void	AUDIO_OUT ;
+typedef	struct AUDIO_OUT_s AUDIO_OUT ;
 
 typedef int (*get_audio_callback_t) (void *callback_data, float *samples, int frames) ;
 
-/* A general audio ooutput function (Linux/OSS, Win32, MacOSX, Solaris)
-** which retrieves data using the callback function in the above struct.
+/* A general audio output function (Linux/ALSA, Linux/OSS, Win32, MacOSX,
+** Solaris) which retrieves data using the callback function in the above
+** struct.
 **
 ** audio_open - opens the device and returns an anonymous pointer to its
 **              own private data.
 */
-
-
 
 AUDIO_OUT *audio_open (int channels, int samplerate) ;
 
 void audio_play (get_audio_callback_t callback, AUDIO_OUT *audio_out, void *callback_data) ;
 
 void audio_close (AUDIO_OUT *audio_data) ;
-
