@@ -3,6 +3,9 @@
     * configure.ac examples/Makefile.am
     Detect ALSA and use it in varispeed-play.
 
+    * examples/audio_out.[ch]
+    On Linux used ALSA instead of OSS when available.
+
 2011-08-15  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * configure.ac
